# lightweight-charts-python

./: .gitignore  AGENT.md  CHANGELOG.md  FUNCTIONALITY_COMPARISON.md  LICENSE  MEMORY.md  MIGRATION_v2.5_to_v3.0.md  QUICK_REFERENCE.md  README.md  README_CN.md  README_EN.md  build_on_windows.txt  html_chart_demo.html  html_chart_demo_abs.html  html_tab_chart_demo.html  html_tab_chart_iframe_demo.html  package-lock.json  package.json  pyproject.toml  reflex_chart_bug_report.md  v2.7.0_REFACTOR_ANALYSIS.md
chart_model/: AGENTS.md  CHART_MODEL_DESIGN.md  CHART_MODEL_NEXT_STEPS.md  MEMORY.md  __init__.py  adapter.py  models.py
chart_model/tests/: check_demo_data.py  smoke_test.py  test_drawing.py  test_drawing_demo.py  test_drawing_help.py  test_drawing_live.py  test_multi_window.py  verify_demo.py
examples/: README.md
examples/10_persistent_legend/: persistent_legend.py
examples/11_vertical_span/: vertical_span.py
examples/12_audit/: audit.py
examples/13_batch_update/: batch_update.py
examples/14_set_period/: set_period.py
examples/15_pyside6_simple/: pyside6_simple.py
examples/16_pyside6_race/: pyside6_race.py
examples/18_hovered_series_on_top/: hovered_series_on_top.py
examples/19_timescale_options/: timescale_options.py
examples/1_setting_data/: setting_data.py
examples/20_tick_mark_density/: tick_mark_density.py
examples/21_marker_auto_scale/: marker_auto_scale.py
examples/22_pop/: pop.py
examples/23_crosshair_move/: crosshair_move.py
examples/24_price_format/: price_format.py
examples/25_screenshot_enhanced/: screenshot_enhanced.py
examples/26_series_batch_update/: series_batch_update.py
examples/27_reflex_chart/: .gitignore  clean.ps1  requirements.txt  run.ps1  rxconfig.py
examples/28_cross_process_chart/: cross_process_chart.py
examples/29_grid_layout/: grid_layout.py
examples/2_live_data/: live_data.py
examples/30_table_component/: table_component.py
examples/31_chart_sync/: chart_sync.py  test_group_sync.py
examples/32_html_tab_chart/: README.md  html_chart_demo.html  (+6 more)
ind_sys/: AGENTS.md  IND_SYS_DESIGN.md  IND_SYS_NEXT_STEPS.md  MEMORY.md  __init__.py  adapter.py  models.py
lightweight_charts/: __init__.py  abstract.py  chart.py  drawing_series.py  drawings.py  polygon.py  reflex_chart.py  series.py  table.py  toolbox.py  topbar.py  util.py  widgets.py
src/: pane-plugin-base.ts
test/: run_tests.py  test_candle_series.py  test_cleanup.py  test_data_aggregation.py  test_features.py  test_position.py  test_reset_sub.py  test_sync_debug.py  test_time_scale.py  test_util.py  test_volume_series.py
tests/: test_position.py
(+62 files in other folders)
