[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-charts-onesixth"
version = "2.5.2"
authors = [
    { name = "louisnw" },
    { name = "onesixth" }
]
license = "MIT"
description = "Python framework for TradingView's Lightweight Charts JavaScript library."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pywebview>=5.0.5",
]

[project.optional-dependencies]
pyside6 = ["pyside6"]
pyqt5 = ["pyqt5"]
pyqt6 = ["pyqt6"]
wx = ["wxpython"]
jupyter = ["ipython", "ipywidgets"]
reflex = ["reflex"]
dev = ["pytest"]

[tool.setuptools.package-data]
lightweight_charts = ["js/*"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "examples*", "docs*", 'images*']

[project.urls]
homepage = "https://github.com/One-sixth/lightweight-charts-python"
